[gd_scene load_steps=10 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/CheckboxStandard/Assets/Checkbox_CheckPic.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/CheckboxStandard/Assets/Checkbox_Black2x2.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/CheckboxStandard/Assets/Checkbox_Blue2x2.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/CheckboxStandard/Assets/Checkbox_Brown2x2.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/CheckboxStandard/Assets/Checkbox_XPic.png" type="Texture" id=5]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButtonWithTooltip.tscn" type="PackedScene" id=7]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/CheckboxStandard/PlayerGUI_CheckboxStandard.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="PlayerGUI_CheckboxStandard" type="MarginContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 175.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="ButtonContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )

[node name="LeftHBox" type="HBoxContainer" parent="HBoxContainer/ButtonContainer"]
margin_right = 30.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="LeftBorder" type="TextureRect" parent="HBoxContainer/ButtonContainer/LeftHBox"]
margin_right = 2.0
margin_bottom = 30.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder_Colored" type="TextureRect" parent="HBoxContainer/ButtonContainer/LeftHBox"]
margin_left = 2.0
margin_right = 4.0
margin_bottom = 30.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightHBox" type="HBoxContainer" parent="HBoxContainer/ButtonContainer"]
margin_left = 26.0
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 10
custom_constants/separation = 0

[node name="RightBorder_Colored" type="TextureRect" parent="HBoxContainer/ButtonContainer/RightHBox"]
margin_right = 2.0
margin_bottom = 30.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="HBoxContainer/ButtonContainer/RightHBox"]
margin_left = 2.0
margin_right = 4.0
margin_bottom = 30.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopVBox" type="VBoxContainer" parent="HBoxContainer/ButtonContainer"]
margin_right = 30.0
margin_bottom = 4.0
size_flags_vertical = 2
custom_constants/separation = 0

[node name="TopBorder" type="TextureRect" parent="HBoxContainer/ButtonContainer/TopVBox"]
margin_right = 30.0
margin_bottom = 2.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ButtonContainer/TopVBox"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 4.0
custom_constants/margin_right = 3
custom_constants/margin_left = 3

[node name="TopBorder_Colored" type="TextureRect" parent="HBoxContainer/ButtonContainer/TopVBox/MarginContainer"]
margin_left = 3.0
margin_right = 27.0
margin_bottom = 2.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomVBox2" type="VBoxContainer" parent="HBoxContainer/ButtonContainer"]
margin_top = 26.0
margin_right = 30.0
margin_bottom = 30.0
size_flags_vertical = 10
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ButtonContainer/BottomVBox2"]
margin_right = 30.0
margin_bottom = 2.0
custom_constants/margin_right = 3
custom_constants/margin_left = 3

[node name="BottomBorder_Colored" type="TextureRect" parent="HBoxContainer/ButtonContainer/BottomVBox2/MarginContainer"]
margin_left = 3.0
margin_right = 27.0
margin_bottom = 2.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="HBoxContainer/ButtonContainer/BottomVBox2"]
margin_top = 2.0
margin_right = 30.0
margin_bottom = 4.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ButtonContainer"]
margin_right = 30.0
margin_bottom = 30.0

[node name="CheckPic" type="TextureRect" parent="HBoxContainer/ButtonContainer/MarginContainer"]
margin_left = 2.0
margin_top = 3.0
margin_right = 28.0
margin_bottom = 27.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 1 )

[node name="XPic" type="TextureRect" parent="HBoxContainer/ButtonContainer/MarginContainer"]
visible = false
margin_left = 3.0
margin_top = 3.0
margin_right = 27.0
margin_bottom = 27.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 30.0
margin_right = 175.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Background" type="TextureRect" parent="HBoxContainer/DescContainer"]
margin_right = 145.0
margin_bottom = 30.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="HBoxContainer/DescContainer"]
margin_left = 143.0
margin_right = 145.0
margin_bottom = 30.0
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="HBoxContainer/DescContainer"]
margin_right = 145.0
margin_bottom = 2.0
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="HBoxContainer/DescContainer"]
margin_top = 28.0
margin_right = 145.0
margin_bottom = 30.0
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/DescContainer"]
margin_right = 145.0
margin_bottom = 30.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="HBoxContainer/DescContainer/MarginContainer"]
margin_left = 5.0
margin_top = 6.0
margin_right = 140.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Sample text 001"

[node name="CheckBoxButton" parent="." instance=ExtResource( 7 )]
margin_right = 175.0
margin_bottom = 30.0
about_button_index_trigger = 2
define_tooltip_construction_in_button = true
